fixed modal content overflow

--- a/src/index.css
+++ b/src/index.css
@@ -319,4 +319,9 @@ button:hover {
       cursor: pointer;
     }
   }
+
+  .modal-content {
+    height: auto;
+    overflow: auto;
+  }
 }
